# cython-scikit-build-template

./: .azure-pipelines.yml  .codecov.yml  .coveragerc  .flake8.cython  .gitignore  .gitlab-ci.yml  .pep8  .pylintrc  .travis.yml  AUTHORS.rst  CMakeLists.txt  CONTRIBUTING.rst  MANIFEST.in  Makefile  README.md  _msvccompiler.py  appveyor.yml  bld.bat  build.sh  check.bat  clean.sh  clear.bat  codecheck.bat  codecov.yml  config.yml  environment.yml  memo.txt  pylintrc.txt  pyproject.toml  pytest.ini  readthedocs.yml  requirements-codecheck.txt  requirements-optional.txt  requirements-test.txt  requirements.txt  setup.cfg  setup.py  style_checker.py  sys_path_check.py  tox.ini
.circleci/: config.yml
.github/workflows/: codeql-analysis.yml  packaging.yml  tests.yml
_skbuild/win-amd64-3.7/cmake-build/: .ninja_log  CMakeSpec.json  build.ninja  rules.ninja
_skbuild/win-amd64-3.7/cmake-build/CMakeTmp/link_flags/gnu_ld_ignore/MODULE/SHARED/src/: CMakeLists.txt  main.c  number.h
_skbuild/win-amd64-3.7/cmake-build/CMakeTmp/link_flags/no_flag/MODULE/SHARED/src/: CMakeLists.txt
_skbuild/win-amd64-3.7/cmake-build/CMakeTmp/link_flags/osx_dynamic_lookup/MODULE/SHARED/src/: CMakeLists.txt  counter.c  counter.h  number.c
_skbuild/win-amd64-3.7/cmake-build/temp/: pi_calculator.cxx
appveyor/: install.ps1
azure-pipelines/: windows-install-ninja.yml
binder/: environment.yml  postBuild
docs/: build.bat  make.bat  requirements.txt  translate.bat
docs/source/: conf.py  index.rst  install.rst  overview.rst  spelling_wordlist.txt
docs/source/locale/ja/LC_MESSAGES/: compatibility.po  contribution.po  developers.po  index.po  install.po  license.po  overview.po  reference.po  tutorial.po
docs/source/reference/: index.rst  pi_calculator.rst  rect.rst
examples/: rectangle_props.py
include/: c_rectangle.pxd  rect.pxd
notebook/: test_rect.ipynb
src/temp/: CMakeLists.txt  PiCalculator.h  __init__.py  c_rectangle.pxd  pi_calculator.pyx  rect.pxd  rect.pyx
temp/: CMakeLists.txt  Rectangle.h
tests/: rect_test.py  test_pi_calculator.py  test_rect.py
travisCI/: temporary solution.txt
