[flake8]
exclude = .eggs,*.egg,build,docs,.git

[tool:pytest]
testpaths = tests
filterwarnings= ignore::FutureWarning
                ignore::UserWarning
                error::DeprecationWarning
                error::numpy.ComplexWarning

[coverage:run]
branch = True
source =
    temp
    tests

[metadata]
license_file = docs/source/license.rst
